# health-risk-prediction-fastapi-ml

./: .gitignore  FRONTEND_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/routes/: predict.py
app/schemas/: input_schema.py
app/services/: prediction_service.py
app/utils/: logger.py  preprocess.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Header.css  Header.js  PredictionForm.css  PredictionForm.js  ResultCard.css  ResultCard.js
ml/: evaluate.py  train.py
tests/: test_api.py
