[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-risk-prediction"
version = "0.1.0"
description = "FastAPI ML service for diabetes risk prediction"
authors = [{name = "Your Name"}]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "scikit-learn==1.5.1",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "joblib==1.4.2",
    "pytest==8.1.1",
    "httpx==0.27.0",
    "pydantic==2.6.4",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-dir]
"" = "."
